fix IE11 layout issue

--- a/app/public/frederikshavn.custom.css
+++ b/app/public/frederikshavn.custom.css
@@ -44,17 +44,12 @@
 }
 
 a.oc-header-preaction {
-    flex: 0 0 auto !important;
-    display: flex !important;
-    flex-flow: column nowrap !important;
-    justify-content: center !important;
-    align-items: center !important;
-    padding: .8rem 1rem !important;
+    padding: .5rem 1rem !important;
 }
 
-a.oc-header-preaction img {    
-    height: 1.25rem;
-    width: 5.75rem;
+.oc-header-preaction img {    
+    height: 1.5rem !important;
+    width: 7rem !important;
 }
 
 .oc-org-link {
