--- a/app/src/assets/tree-layouts/hybrid.scss
+++ b/app/src/assets/tree-layouts/hybrid.scss
@@ -139,10 +139,10 @@
                     & .oc-tt-node-tail {
                         display: block;
                         position: absolute;
-                        bottom: -1rem;
+                        bottom: -1.125rem;
                         top: auto;
                         left: 50%;
-                        height: 1rem;
+                        height: 1.125rem;
                         width: 3px;
                         background-color: var(--shade-lightest);
                     }
@@ -174,7 +174,7 @@
                         }
 
                         &:last-child > .oc-tt-node .oc-tt-node-head {
-                            right: calc(100% - 6.125rem);
+                            right: calc(100% - 6.175rem);
                         }
                     }
                 }
